--- a/math quiz.html
+++ b/math quiz.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+<title>Math test</title>
+</head>
+<body>
 <form>
     Name:<br/>
     <input type="text" 
@@ -53,3 +59,5 @@ placeholder="text">
 <!--End of page ranges-->
 </li>
 </ol>
+</body>
+</html>
